<resources>
    <!-- App name -->
    <string name="app_name">APOD Browser</string>

    <!-- Content Description -->
    <string name="content_description_astronomical_picture_of_the_day">Astronomical Picture of the Day</string>
    <string name="content_description_play_apod_video">Play Astronomical Picture of the Day video</string>
    <string name="content_description_network_request_error">Network request error</string>
    <string name="content_description_no_favorite_apods_found_illustration">No favorite APOD\'s found illustration</string>

    <!-- Common -->
    <string name="latest">Latest</string>
    <string name="details">Details</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="apod_type_image">Image</string>
    <string name="apod_type_video">Video</string>

    <!-- Toolbar Actions -->
    <string name="toolbar_action_title_pick_apod_by_date">Pick APOD by date</string>
    <string name="toolbar_action_title_get_random_apod">Feeling lucky…</string>
    <string name="toolbar_action_title_add_to_favorites">Add to favorites</string>
    <string name="toolbar_action_title_delete">Delete</string>
    <string name="toolbar_action_title_search">Search</string>
    <string name="toolbar_action_title_visit_apod_website">Visit APOD website</string>
    <string name="toolbar_action_title_export_apod_image">Export image</string>

    <!-- Messages -->
    <string name="message_nothing_found">Nothing found</string>
    <string name="message_click_on_add_to_favorites">Add favorites or try to search for something different.</string>
    <string name="message_something_went_wrong">Something went wrong…</string>
    <string name="message_check_your_connection_and_try_again">Check your connection and try again.</string>
    <string name="message_apod_added_to_favorites_completed">Added to favorites</string>
    <string name="message_unexpected_error_occurred">Unexpected error occurred. Please try again later.</string>
    <string name="message_apod_image_exported_successfully">Image exported to device\'s gallery</string>
    <string name="message_cached_images_removed_successfully">Cached images removed successfully</string>

    <!-- Dialog messages -->
    <string name="dialog_message_grant_external_storage_permission">In order to export images, we need access to the device\'s external storage.</string>
    <string name="dialog_message_enable_permission_manually">To enable this feature, turn on the access to external storage in the app info on your device\'s settings.</string>
    <string name="dialog_message_clear_image_cache">Are you sure? APODs will take more time to load next time.</string>
    <string name="dialog_message_confirm_apod_deletion">This action cannot be undone.</string>

    <!-- Dialog title -->
    <string name="dialog_title_grant_permission">Grant permission</string>
    <string name="dialog_title_default_date_range">Default date range</string>
    <string name="dialog_title_clear_image_cache">Clear image cache</string>
    <string name="dialog_title_are_you_sure">Are you sure?</string>

    <!-- Dialog button text -->
    <string name="dialog_button_text_cancel">Cancel</string>
    <string name="dialog_button_text_delete">Delete</string>

    <!-- Misc. -->
    <string name="apod_website_url">https://apod.nasa.gov/apod/astropix.html</string>
    <string name="by">By: %s</string>

    <!-- Default date range preference entries -->
    <string name="last_seven_days">Last seven days</string>
    <string name="last_fourteen_days">Last fourteen days</string>
    <string name="last_twenty_one_days">Last twenty-one days</string>
    <string name="last_thirty_days">Last thirty days</string>

    <!-- Preference strings -->
    <string name="preference_category_title_app_options">App options</string>
    <string name="preference_category_title_storage">Storage</string>
    <string name="preference_category_title_app_info">App info</string>
    <string name="preference_summary_clear_image_cache">Remove all cached images</string>
    <string name="preference_title_default_date_range">Default date range</string>
    <string name="preference_title_clear_image_cache">Clear image cache</string>
    <string name="preference_title_app_version">App version</string>

    <!-- Lorem Ipsum -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur interdum, magna nec sagittis consequat, sem augue placerat sapien, a feugiat velit neque eu massa. Suspendisse aliquam lobortis lacus eu pellentesque. Suspendisse potenti. Aenean convallis libero a tortor ullamcorper semper. Vestibulum ac ipsum eu elit luctus aliquam non at ipsum. Integer cursus lacus ut porttitor pellentesque. Fusce erat lacus, facilisis eu nunc ac, feugiat venenatis mauris. Mauris nec ligula vel purus mattis interdum id vel lacus. Ut a velit ut lorem semper posuere. Proin vehicula odio mattis diam mattis lobortis. Quisque hendrerit semper neque, at tempus ex posuere non. Suspendisse sed sodales ante. </string>

</resources>